--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ replay_pid*
 
 # Ignore Gradle project-specific cache directory
 .gradle
+.idea
 
 # Ignore Gradle build output directory
 build
+
+# vscode stuff
+.vscode
